# raytrax

./: .gitignore  CITATION.cff  CLAUDE.md  CODEOWNERS  README.md  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: 3d-visualisation.md  acknowledgements.md  api.md  equilibrium.md  getting-started.md  index.md  limitations.md  raytraxing.md  theory.md  tuning.md
docs/examples/: README.md
docs/theory/: absorption.md  ray-tracing.md
integration_tests/: ecrh_w7x.py  profile_w7x.py  test_travis_comparison.py  travis_wrapper.py
integration_tests/data/: travis_w7x_reference.json
notebooks/: 01_first_trace.ipynb  02_w7x_trace_and_visualization.ipynb  03_gradient_optimization.ipynb  README.md
raytrax/: __init__.py  absorption.py  api.py  bessel.py  data.py  distribution_function.py  fourier.py  fourier_test.py  hamiltonian.py  interpolate.py  polarization.py  ray.py  solver.py  type_conversion.py  types.py
raytrax/examples/: paraview_state_w7x.py  visualize_equilibrium.py
scripts/: generate_3d_html.py
src/: LICENSE.md
src/raytrax/: __init__.py  absorption.py  api.py  data.py  dispersion.py  distribution_function.py  interpolate.py  power_flux.py  ray.py  solver.py  types.py
src/raytrax/equilibrium/: fourier.py  interpolate.py  protocol.py
src/raytrax/examples/: visualize_equilibrium.py  w7x.py
src/raytrax/math/: bessel.py  faddeeva.py  shkarofsky.py  utils.py
src/raytrax/physics/: absorption.py  dielectric_tensor.py  dispersion.py  distribution_function.py  hamiltonian.py  polarization.py  power_flux.py  quantities.py
src/raytrax/plot/: __init__.py  plot1d.py  plot2d.py  plot3d.py
src/raytrax/tracer/: __init__.py  buffers.py  ray.py  solver.py
tests/: absorption_test.py  api_test.py  bessel_test.py  data_test.py  dispersion_test.py  fixtures.py  fixtures_test.py  fourier_test.py  generate_travis_reference.py  import_test.py  integration_travis_test.py  interpolate_test.py  plot3d_test.py  solver_test.py  test_absorption_vs_travis.py  travis_wrapper.py  type_conversion_test.py  types_test.py
tests/equilibrium/: fourier_test.py  interpolate_test.py
tests/math/: faddeeva_test.py  shkarofsky_test.py
tests/physics/: absorption_test.py  dielectric_tensor_test.py  polarization_test.py  power_flux_test.py
tests/plot/: plot2d_test.py  plot3d_test.py
