[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["raytrax*"]

[tool.setuptools.package-data]
raytrax = ["equilibrium/data/w7x.json"]

[project]
name = "raytrax"
version = "0.0.1"
dependencies = [
  "jax",
  "jaxtyping",
  "numpy",
  "scipy",
  "interpax",
  "diffrax>=0.7.1",
  "beartype",
  "vmecpp",
  "safetensors",
  "matplotlib",
]
requires-python = ">=3.11"
authors = [
  {name = "David Straub", email = "straub@protonmail.com"},
]
description = "An ECRH ray tracer based on JAX"
readme = "README.md"

[project.optional-dependencies]
test = [
  "pytest",
  "mypy",
  "pre-commit",
]
docs = [
  "zensical",
  "mkdocstrings-python",
]
plot3d = [
  "pyvista",
]

[project.urls]
Homepage = "https://github.com/proximafusion/raytrax"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
# Explicitly exclude integration tests
norecursedirs = ["integration_tests", ".git", ".tox", "dist", "build", "*.egg"]
markers = [
  "integration: potentially slow integration tests",
]
