[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["raytrax*"]

[tool.setuptools.package-data]
raytrax = ["equilibrium/data/w7x.json"]

[tool.setuptools_scm]

[project]
name = "raytrax"
dynamic = ["version"]
dependencies = [
  "jax",
  "jaxtyping",
  "numpy",
  "scipy",
  "interpax<0.3.14",
  "diffrax>=0.7.1",
  "beartype",
  "vmecpp",
  "safetensors",
  "matplotlib",
]
requires-python = ">=3.11"
authors = [
  {name = "David Straub", email = "straub@protonmail.com"},
]
description = "An ECRH ray tracer based on JAX"
readme = "README.md"

[project.optional-dependencies]
test = [
  "pytest",
  "mypy",
  "ruff",
  "pre-commit",
]
docs = [
  "zensical",
  "mkdocstrings-python",
  "mkdocs-gallery",
  "pyvista[jupyter]",
]
plot3d = [
  "pyvista[jupyter]",
]

[project.urls]
Homepage = "https://github.com/proximafusion/raytrax"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
  "E501",   # line too long — handled by formatter
  "F722",   # jaxtyping multi-dimensional shapes trigger F722; safe to disable globally
]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = [
    "E402",  # imports after jax.config.update() are intentional
    "E702",  # semicolon-separated statements are idiomatic in notebooks
]
"docs/examples/**" = ["E402"]     # example scripts intentionally set up env before imports
"integration_tests/**" = ["E402"] # same reason

[tool.ruff.lint.isort]
known-first-party = ["raytrax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
# Explicitly exclude integration tests
norecursedirs = ["integration_tests", ".git", ".tox", "dist", "build", "*.egg"]
markers = [
  "integration: potentially slow integration tests",
]
